--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -137,6 +137,12 @@ footer {
   width: 100%;
 }
 
+.footer {
+  position: relative;
+  margin-bottom: 0px;
+  width: 100%;
+}
+
 /* Product Details Page */
 #product_id {
   color: grey;
